fix cut off hand in mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1412,12 +1412,17 @@ article {
 
 .wave-hand {
   position: absolute;
-  bottom: 280px;
+  top: -40px;
   right: 50px;
   font-size: 24px;
   animation: popAndWave 4s infinite;
   transform-origin: center;
   display: none;
+
+  @media screen and (max-width: 768px) {
+    top: -15px;  // Adjusted for mobile
+    right: 30px; // Slightly adjusted horizontal position for mobile
+  }
 }
 
 @keyframes popAndWave {
